<?xml version="1.0" encoding="utf-8"?>


<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:background="@drawable/our_background">

    <TextView
        android:id="@+id/textloc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/pixels"
        android:text="@string/loc_label"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/textset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="160dp"
        android:layout_marginTop="5dp"
        android:layout_toEndOf="@+id/textloc"
        android:fontFamily="@font/pixels"
        android:text="@string/set_label"
        android:textColor="@color/white"
        android:textSize="16sp" />

    <Spinner
        android:id="@+id/locations"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textloc"
        android:layout_alignParentStart="true"
        android:layout_marginStart="10dp"

        android:backgroundTint="@color/purple_200"
        android:minWidth="200dp"
        android:minHeight="48dp"
        tools:ignore="SpeakableTextPresentCheck" />

    <Spinner
        android:id="@+id/settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textset"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="10dp"

        android:layout_marginEnd="10dp"
        android:layout_toEndOf="@+id/locations"
        android:backgroundTint="@color/purple_200"
        android:entries="@array/settings"
        android:minWidth="200sp"
        android:minHeight="48dp" />

    <TextView
        android:id="@+id/textpers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/settings"
        android:layout_marginStart="10dp"
        android:layout_marginTop="30dp"
        android:width="80dp"
        android:height="48dp"
        android:fontFamily="@font/pixels"
        android:gravity="center"
        android:text="@string/persons_label"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="16sp"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/persons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/settings"
        android:layout_marginStart="10dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="10dp"
        android:layout_toEndOf="@+id/textpers"
        android:fontFamily="@font/pixels"
        android:hint="@string/persons_hint"
        android:importantForAutofill="no"
        android:inputType="text|textAutoComplete"
        android:maxLength="30"
        android:minHeight="48dp"
        android:singleLine="true"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="22sp"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/textobj"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textpers"
        android:layout_marginStart="10dp"
        android:layout_marginTop="25dp"
        android:width="80dp"
        android:height="48dp"
        android:fontFamily="@font/pixels"
        android:gravity="center"
        android:text="@string/objects_label"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/objects"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/persons"
        android:layout_marginStart="10dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:layout_toEndOf="@+id/textobj"
        android:fontFamily="@font/pixels"
        android:hint="@string/objects_hint"
        android:importantForAutofill="no"
        android:inputType="text|textAutoComplete"
        android:maxLength="20"
        android:minHeight="48dp"
        android:scrollHorizontally="false"
        android:singleLine="true"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="22sp"
        tools:ignore="TextContrastCheck" />

    <ImageButton
        android:id="@+id/generateButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/objects"
        android:layout_marginHorizontal="100dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/our_button"
        android:contentDescription="@string/Generate_button"
        android:fontFamily="@font/ubuntu_bold"
        android:maxHeight="48dp"
        android:textColor="@color/white"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/generateButton"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/barcade"
        android:text="@string/description"
        android:textAlignment="center"
        android:textColor="#7E57C2"
        android:textSize="20sp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/description"
        android:layout_marginTop="10dp"
        android:scrollbarStyle="outsideInset">

        <TextView
            android:id="@+id/result"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/pixels"
            android:padding="10dp"
            android:text="@string/defaultExample"
            android:textSize="16sp"
            android:textAlignment="center"
            android:textColor="@color/white" />
    </ScrollView>

</RelativeLayout>

